--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 68,
       "column": 13,
-      "index": 3641
+      "index": 3590
     },
     "end": {
-      "line": 72,
+      "line": 71,
       "column": 3,
-      "index": 3714
+      "index": 3663
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 72,
       "column": 13,
-      "index": 3729
+      "index": 3678
     },
     "end": {
-      "line": 76,
+      "line": 75,
       "column": 3,
-      "index": 3811
+      "index": 3760
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 76,
       "column": 13,
-      "index": 3826
+      "index": 3775
     },
     "end": {
-      "line": 80,
+      "line": 79,
       "column": 3,
-      "index": 3905
+      "index": 3854
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 81,
+      "line": 80,
       "column": 16,
-      "index": 3923
+      "index": 3872
     },
     "end": {
-      "line": 84,
+      "line": 83,
       "column": 3,
-      "index": 4008
+      "index": 3957
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 84,
       "column": 15,
-      "index": 4025
+      "index": 3974
     },
     "end": {
-      "line": 88,
+      "line": 87,
       "column": 3,
-      "index": 4101
+      "index": 4050
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 88,
       "column": 12,
-      "index": 4115
+      "index": 4064
     },
     "end": {
-      "line": 92,
+      "line": 91,
       "column": 3,
-      "index": 4192
+      "index": 4141
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 92,
       "column": 10,
-      "index": 4204
+      "index": 4153
     },
     "end": {
-      "line": 96,
+      "line": 95,
       "column": 3,
-      "index": 4277
+      "index": 4226
     }
   },
   {
@@ -109,29 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 96,
       "column": 18,
-      "index": 4297
+      "index": 4246
     },
     "end": {
-      "line": 100,
+      "line": 99,
       "column": 3,
-      "index": 4386
-    }
-  },
-  {
-    "id": "swap.swapScreen.balance",
-    "defaultMessage": "!!!Balance",
-    "file": "src/features/Swap/common/strings.ts",
-    "start": {
-      "line": 101,
-      "column": 11,
-      "index": 4399
-    },
-    "end": {
-      "line": 104,
-      "column": 3,
-      "index": 4473
+      "index": 4335
     }
   },
   {
@@ -139,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 105,
+      "line": 100,
       "column": 15,
-      "index": 4490
+      "index": 4352
     },
     "end": {
-      "line": 108,
+      "line": 103,
       "column": 3,
-      "index": 4573
+      "index": 4435
     }
   },
   {
@@ -154,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 104,
       "column": 15,
-      "index": 4590
+      "index": 4452
     },
     "end": {
-      "line": 112,
+      "line": 107,
       "column": 3,
-      "index": 4673
+      "index": 4535
     }
   },
   {
@@ -169,14 +154,14 @@
     "defaultMessage": "!!!Limit Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 108,
       "column": 14,
-      "index": 4689
+      "index": 4551
     },
     "end": {
-      "line": 116,
+      "line": 111,
       "column": 3,
-      "index": 4770
+      "index": 4632
     }
   },
   {
@@ -184,14 +169,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 117,
+      "line": 112,
       "column": 21,
-      "index": 4793
+      "index": 4655
     },
     "end": {
-      "line": 120,
+      "line": 115,
       "column": 3,
-      "index": 4888
+      "index": 4750
     }
   },
   {
@@ -199,14 +184,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 121,
+      "line": 116,
       "column": 25,
-      "index": 4915
+      "index": 4777
     },
     "end": {
-      "line": 124,
+      "line": 119,
       "column": 3,
-      "index": 5019
+      "index": 4881
     }
   },
   {
@@ -214,14 +199,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 120,
       "column": 14,
-      "index": 5035
+      "index": 4897
     },
     "end": {
-      "line": 128,
+      "line": 123,
       "column": 3,
-      "index": 5123
+      "index": 4985
     }
   },
   {
@@ -229,14 +214,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 124,
       "column": 12,
-      "index": 5137
+      "index": 4999
     },
     "end": {
-      "line": 132,
+      "line": 127,
       "column": 3,
-      "index": 5235
+      "index": 5097
     }
   },
   {
@@ -244,14 +229,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 133,
+      "line": 128,
       "column": 19,
-      "index": 5256
+      "index": 5118
     },
     "end": {
-      "line": 136,
+      "line": 131,
       "column": 3,
-      "index": 5357
+      "index": 5219
     }
   },
   {
@@ -259,14 +244,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 137,
+      "line": 132,
       "column": 16,
-      "index": 5375
+      "index": 5237
     },
     "end": {
-      "line": 140,
+      "line": 135,
       "column": 3,
-      "index": 5513
+      "index": 5375
     }
   },
   {
@@ -274,14 +259,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 136,
       "column": 14,
-      "index": 5529
+      "index": 5391
     },
     "end": {
-      "line": 145,
+      "line": 140,
       "column": 3,
-      "index": 5710
+      "index": 5572
     }
   },
   {
@@ -289,14 +274,14 @@
     "defaultMessage": "!!!Min ADA",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 141,
       "column": 19,
-      "index": 5731
+      "index": 5593
     },
     "end": {
-      "line": 149,
+      "line": 144,
       "column": 3,
-      "index": 5813
+      "index": 5675
     }
   },
   {
@@ -304,14 +289,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 145,
       "column": 12,
-      "index": 5827
+      "index": 5689
     },
     "end": {
-      "line": 153,
+      "line": 148,
       "column": 3,
-      "index": 5990
+      "index": 5852
     }
   },
   {
@@ -319,14 +304,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 154,
+      "line": 149,
       "column": 17,
-      "index": 6009
+      "index": 5871
     },
     "end": {
-      "line": 157,
+      "line": 152,
       "column": 3,
-      "index": 6085
+      "index": 5947
     }
   },
   {
@@ -334,14 +319,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 158,
+      "line": 153,
       "column": 19,
-      "index": 6106
+      "index": 5968
     },
     "end": {
-      "line": 161,
+      "line": 156,
       "column": 3,
-      "index": 6252
+      "index": 6114
     }
   },
   {
@@ -349,14 +334,14 @@
     "defaultMessage": "!!!Min Received",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 162,
+      "line": 157,
       "column": 24,
-      "index": 6278
+      "index": 6140
     },
     "end": {
-      "line": 165,
+      "line": 160,
       "column": 3,
-      "index": 6370
+      "index": 6232
     }
   },
   {
@@ -364,14 +349,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 166,
+      "line": 161,
       "column": 17,
-      "index": 6389
+      "index": 6251
     },
     "end": {
-      "line": 169,
+      "line": 164,
       "column": 3,
-      "index": 6527
+      "index": 6389
     }
   },
   {
@@ -379,14 +364,14 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 170,
+      "line": 165,
       "column": 20,
-      "index": 6549
+      "index": 6411
     },
     "end": {
-      "line": 173,
+      "line": 168,
       "column": 3,
-      "index": 6644
+      "index": 6506
     }
   },
   {
@@ -394,14 +379,14 @@
     "defaultMessage": "!!!Volume, 24h",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 174,
+      "line": 169,
       "column": 10,
-      "index": 6656
+      "index": 6518
     },
     "end": {
-      "line": 177,
+      "line": 172,
       "column": 3,
-      "index": 6733
+      "index": 6595
     }
   },
   {
@@ -409,29 +394,29 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 178,
+      "line": 173,
       "column": 24,
-      "index": 6759
+      "index": 6621
     },
     "end": {
-      "line": 182,
+      "line": 177,
       "column": 3,
-      "index": 7041
+      "index": 6903
     }
   },
   {
-    "id": "global,price",
+    "id": "global.price",
     "defaultMessage": "!!! Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 178,
       "column": 9,
-      "index": 7052
+      "index": 6914
     },
     "end": {
-      "line": 186,
+      "line": 181,
       "column": 3,
-      "index": 7114
+      "index": 6976
     }
   },
   {
@@ -439,14 +424,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 182,
       "column": 17,
-      "index": 7133
+      "index": 6995
     },
     "end": {
-      "line": 190,
+      "line": 185,
       "column": 3,
-      "index": 7235
+      "index": 7097
     }
   },
   {
@@ -454,14 +439,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 186,
       "column": 21,
-      "index": 7258
+      "index": 7120
     },
     "end": {
-      "line": 194,
+      "line": 189,
       "column": 3,
-      "index": 7360
+      "index": 7222
     }
   },
   {
@@ -469,14 +454,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 190,
       "column": 17,
-      "index": 7379
+      "index": 7241
     },
     "end": {
-      "line": 198,
+      "line": 193,
       "column": 3,
-      "index": 7466
+      "index": 7328
     }
   },
   {
@@ -484,14 +469,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 194,
       "column": 14,
-      "index": 7482
+      "index": 7344
     },
     "end": {
-      "line": 202,
+      "line": 197,
       "column": 3,
-      "index": 7563
+      "index": 7425
     }
   },
   {
@@ -499,14 +484,14 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 203,
+      "line": 198,
       "column": 19,
-      "index": 7584
+      "index": 7446
     },
     "end": {
-      "line": 206,
+      "line": 201,
       "column": 3,
-      "index": 7675
+      "index": 7537
     }
   },
   {
@@ -514,14 +499,14 @@
     "defaultMessage": "!!!TVL",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 207,
+      "line": 202,
       "column": 7,
-      "index": 7684
+      "index": 7546
     },
     "end": {
-      "line": 210,
+      "line": 205,
       "column": 3,
-      "index": 7750
+      "index": 7612
     }
   },
   {
@@ -529,14 +514,14 @@
     "defaultMessage": "!!! Pool Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 211,
+      "line": 206,
       "column": 11,
-      "index": 7763
+      "index": 7625
     },
     "end": {
-      "line": 214,
+      "line": 209,
       "column": 3,
-      "index": 7839
+      "index": 7701
     }
   },
   {
@@ -544,14 +529,14 @@
     "defaultMessage": "!!! Batcher Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 215,
+      "line": 210,
       "column": 14,
-      "index": 7855
+      "index": 7717
     },
     "end": {
-      "line": 218,
+      "line": 213,
       "column": 3,
-      "index": 7937
+      "index": 7799
     }
   },
   {
@@ -559,14 +544,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 219,
+      "line": 214,
       "column": 9,
-      "index": 7948
+      "index": 7810
     },
     "end": {
-      "line": 222,
+      "line": 217,
       "column": 3,
-      "index": 8021
+      "index": 7883
     }
   },
   {
@@ -574,14 +559,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 223,
+      "line": 218,
       "column": 9,
-      "index": 8032
+      "index": 7894
     },
     "end": {
-      "line": 226,
+      "line": 221,
       "column": 3,
-      "index": 8093
+      "index": 7955
     }
   },
   {
@@ -589,14 +574,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 227,
+      "line": 222,
       "column": 19,
-      "index": 8114
+      "index": 7976
     },
     "end": {
-      "line": 230,
+      "line": 225,
       "column": 3,
-      "index": 8196
+      "index": 8058
     }
   },
   {
@@ -604,14 +589,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 231,
+      "line": 226,
       "column": 20,
-      "index": 8218
+      "index": 8080
     },
     "end": {
-      "line": 234,
+      "line": 229,
       "column": 3,
-      "index": 8302
+      "index": 8164
     }
   },
   {
@@ -619,14 +604,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 235,
+      "line": 230,
       "column": 25,
-      "index": 8329
+      "index": 8191
     },
     "end": {
-      "line": 238,
+      "line": 233,
       "column": 3,
-      "index": 8449
+      "index": 8311
     }
   },
   {
@@ -634,14 +619,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 239,
+      "line": 234,
       "column": 8,
-      "index": 8459
+      "index": 8321
     },
     "end": {
-      "line": 242,
+      "line": 237,
       "column": 3,
-      "index": 8518
+      "index": 8380
     }
   },
   {
@@ -649,14 +634,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 243,
+      "line": 238,
       "column": 14,
-      "index": 8534
+      "index": 8396
     },
     "end": {
-      "line": 246,
+      "line": 241,
       "column": 3,
-      "index": 8593
+      "index": 8455
     }
   },
   {
@@ -664,14 +649,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 249,
+      "line": 244,
       "column": 11,
-      "index": 8652
+      "index": 8514
     },
     "end": {
-      "line": 252,
+      "line": 247,
       "column": 3,
-      "index": 8747
+      "index": 8609
     }
   },
   {
@@ -679,14 +664,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 253,
+      "line": 248,
       "column": 12,
-      "index": 8761
+      "index": 8623
     },
     "end": {
-      "line": 256,
+      "line": 251,
       "column": 3,
-      "index": 8864
+      "index": 8726
     }
   },
   {
@@ -694,14 +679,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 257,
+      "line": 252,
       "column": 9,
-      "index": 8875
+      "index": 8737
     },
     "end": {
-      "line": 260,
+      "line": 255,
       "column": 3,
-      "index": 8965
+      "index": 8827
     }
   },
   {
@@ -709,14 +694,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 261,
+      "line": 256,
       "column": 16,
-      "index": 8983
+      "index": 8845
     },
     "end": {
-      "line": 264,
+      "line": 259,
       "column": 3,
-      "index": 9079
+      "index": 8941
     }
   },
   {
@@ -724,14 +709,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 265,
+      "line": 260,
       "column": 20,
-      "index": 9101
+      "index": 8963
     },
     "end": {
-      "line": 268,
+      "line": 263,
       "column": 3,
-      "index": 9190
+      "index": 9052
     }
   },
   {
@@ -739,14 +724,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 269,
+      "line": 264,
       "column": 11,
-      "index": 9203
+      "index": 9065
     },
     "end": {
-      "line": 272,
+      "line": 267,
       "column": 3,
-      "index": 9297
+      "index": 9159
     }
   }
 ]
