--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 61,
+      "line": 70,
       "column": 13,
-      "index": 3243
+      "index": 3722
     },
     "end": {
-      "line": 64,
+      "line": 73,
       "column": 3,
-      "index": 3316
+      "index": 3795
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 65,
+      "line": 74,
       "column": 13,
-      "index": 3331
+      "index": 3810
     },
     "end": {
-      "line": 68,
+      "line": 77,
       "column": 3,
-      "index": 3413
+      "index": 3892
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 78,
       "column": 13,
-      "index": 3428
+      "index": 3907
     },
     "end": {
-      "line": 72,
+      "line": 81,
       "column": 3,
-      "index": 3507
+      "index": 3986
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 82,
       "column": 16,
-      "index": 3525
+      "index": 4004
     },
     "end": {
-      "line": 76,
+      "line": 85,
       "column": 3,
-      "index": 3610
+      "index": 4089
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 86,
       "column": 15,
-      "index": 3627
+      "index": 4106
     },
     "end": {
-      "line": 80,
+      "line": 89,
       "column": 3,
-      "index": 3703
+      "index": 4182
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 81,
+      "line": 90,
       "column": 12,
-      "index": 3717
+      "index": 4196
     },
     "end": {
-      "line": 84,
+      "line": 93,
       "column": 3,
-      "index": 3794
+      "index": 4273
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 94,
       "column": 10,
-      "index": 3806
+      "index": 4285
     },
     "end": {
-      "line": 88,
+      "line": 97,
       "column": 3,
-      "index": 3879
+      "index": 4358
     }
   },
   {
@@ -109,14 +109,29 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 98,
       "column": 18,
-      "index": 3899
+      "index": 4378
     },
     "end": {
-      "line": 92,
+      "line": 101,
       "column": 3,
-      "index": 3988
+      "index": 4467
+    }
+  },
+  {
+    "id": "swap.swapScreen.balance",
+    "defaultMessage": "!!!Balance",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 102,
+      "column": 11,
+      "index": 4480
+    },
+    "end": {
+      "line": 105,
+      "column": 3,
+      "index": 4554
     }
   },
   {
@@ -124,14 +139,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 106,
       "column": 15,
-      "index": 4005
+      "index": 4571
     },
     "end": {
-      "line": 96,
+      "line": 109,
       "column": 3,
-      "index": 4088
+      "index": 4654
     }
   },
   {
@@ -139,14 +154,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 110,
       "column": 15,
-      "index": 4105
+      "index": 4671
     },
     "end": {
-      "line": 100,
+      "line": 113,
       "column": 3,
-      "index": 4188
+      "index": 4754
     }
   },
   {
@@ -154,14 +169,14 @@
     "defaultMessage": "!!!Limit Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 101,
+      "line": 114,
       "column": 14,
-      "index": 4204
+      "index": 4770
     },
     "end": {
-      "line": 104,
+      "line": 117,
       "column": 3,
-      "index": 4285
+      "index": 4851
     }
   },
   {
@@ -169,14 +184,29 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 105,
+      "line": 118,
       "column": 21,
-      "index": 4308
+      "index": 4874
     },
     "end": {
-      "line": 108,
+      "line": 121,
       "column": 3,
-      "index": 4403
+      "index": 4969
+    }
+  },
+  {
+    "id": "swap.swapScreen.slippageToleranceError",
+    "defaultMessage": "!!!Slippage must be a number between 0 and 100 and have up to 1 decimal",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 122,
+      "column": 26,
+      "index": 4997
+    },
+    "end": {
+      "line": 125,
+      "column": 3,
+      "index": 5147
     }
   },
   {
@@ -184,14 +214,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 126,
       "column": 25,
-      "index": 4430
+      "index": 5174
     },
     "end": {
-      "line": 112,
+      "line": 129,
       "column": 3,
-      "index": 4534
+      "index": 5278
     }
   },
   {
@@ -199,14 +229,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 130,
       "column": 14,
-      "index": 4550
+      "index": 5294
     },
     "end": {
-      "line": 116,
+      "line": 133,
       "column": 3,
-      "index": 4638
+      "index": 5382
     }
   },
   {
@@ -214,14 +244,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 117,
+      "line": 134,
       "column": 12,
-      "index": 4652
+      "index": 5396
     },
     "end": {
-      "line": 120,
+      "line": 137,
       "column": 3,
-      "index": 4750
+      "index": 5494
     }
   },
   {
@@ -229,14 +259,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 121,
+      "line": 138,
       "column": 19,
-      "index": 4771
+      "index": 5515
     },
     "end": {
-      "line": 124,
+      "line": 141,
       "column": 3,
-      "index": 4872
+      "index": 5616
     }
   },
   {
@@ -244,14 +274,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 142,
       "column": 16,
-      "index": 4890
+      "index": 5634
     },
     "end": {
-      "line": 128,
+      "line": 145,
       "column": 3,
-      "index": 5028
+      "index": 5772
     }
   },
   {
@@ -259,14 +289,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 146,
       "column": 14,
-      "index": 5044
+      "index": 5788
     },
     "end": {
-      "line": 133,
+      "line": 150,
       "column": 3,
-      "index": 5225
+      "index": 5969
     }
   },
   {
@@ -274,14 +304,14 @@
     "defaultMessage": "!!!Min ADA",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 134,
+      "line": 151,
       "column": 19,
-      "index": 5246
+      "index": 5990
     },
     "end": {
-      "line": 137,
+      "line": 154,
       "column": 3,
-      "index": 5328
+      "index": 6072
     }
   },
   {
@@ -289,14 +319,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 155,
       "column": 12,
-      "index": 5342
+      "index": 6086
     },
     "end": {
-      "line": 141,
+      "line": 158,
       "column": 3,
-      "index": 5505
+      "index": 6249
     }
   },
   {
@@ -304,14 +334,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 159,
       "column": 17,
-      "index": 5524
+      "index": 6268
     },
     "end": {
-      "line": 145,
+      "line": 162,
       "column": 3,
-      "index": 5600
+      "index": 6344
     }
   },
   {
@@ -319,14 +349,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 163,
       "column": 19,
-      "index": 5621
+      "index": 6365
     },
     "end": {
-      "line": 149,
+      "line": 166,
       "column": 3,
-      "index": 5767
+      "index": 6511
     }
   },
   {
@@ -334,14 +364,14 @@
     "defaultMessage": "!!!Min Received",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 167,
       "column": 24,
-      "index": 5793
+      "index": 6537
     },
     "end": {
-      "line": 153,
+      "line": 170,
       "column": 3,
-      "index": 5885
+      "index": 6629
     }
   },
   {
@@ -349,14 +379,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 154,
+      "line": 171,
       "column": 17,
-      "index": 5904
+      "index": 6648
     },
     "end": {
-      "line": 157,
+      "line": 174,
       "column": 3,
-      "index": 6042
+      "index": 6786
     }
   },
   {
@@ -364,14 +394,29 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 158,
+      "line": 175,
       "column": 20,
-      "index": 6064
+      "index": 6808
     },
     "end": {
-      "line": 161,
+      "line": 178,
       "column": 3,
-      "index": 6159
+      "index": 6903
+    }
+  },
+  {
+    "id": "swap.swapScreen.volume",
+    "defaultMessage": "!!!Volume, 24h",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 179,
+      "column": 10,
+      "index": 6915
+    },
+    "end": {
+      "line": 182,
+      "column": 3,
+      "index": 6992
     }
   },
   {
@@ -379,14 +424,29 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 162,
+      "line": 183,
       "column": 24,
-      "index": 6185
+      "index": 7018
     },
     "end": {
-      "line": 166,
+      "line": 187,
       "column": 3,
-      "index": 6467
+      "index": 7300
+    }
+  },
+  {
+    "id": "global.price",
+    "defaultMessage": "!!! Price",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 188,
+      "column": 9,
+      "index": 7311
+    },
+    "end": {
+      "line": 191,
+      "column": 3,
+      "index": 7373
     }
   },
   {
@@ -394,14 +454,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 192,
       "column": 17,
-      "index": 6486
+      "index": 7392
     },
     "end": {
-      "line": 170,
+      "line": 195,
       "column": 3,
-      "index": 6588
+      "index": 7494
     }
   },
   {
@@ -409,14 +469,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 196,
       "column": 21,
-      "index": 6611
+      "index": 7517
     },
     "end": {
-      "line": 174,
+      "line": 199,
       "column": 3,
-      "index": 6713
+      "index": 7619
     }
   },
   {
@@ -424,14 +484,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 200,
       "column": 17,
-      "index": 6732
+      "index": 7638
     },
     "end": {
-      "line": 178,
+      "line": 203,
       "column": 3,
-      "index": 6819
+      "index": 7725
     }
   },
   {
@@ -439,14 +499,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 204,
       "column": 14,
-      "index": 6835
+      "index": 7741
     },
     "end": {
-      "line": 182,
+      "line": 207,
       "column": 3,
-      "index": 6916
+      "index": 7822
     }
   },
   {
@@ -454,14 +514,59 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 208,
       "column": 19,
-      "index": 6937
+      "index": 7843
     },
     "end": {
-      "line": 186,
+      "line": 211,
       "column": 3,
-      "index": 7028
+      "index": 7934
+    }
+  },
+  {
+    "id": "swap.swapScreen.tvl",
+    "defaultMessage": "!!!TVL",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 212,
+      "column": 7,
+      "index": 7943
+    },
+    "end": {
+      "line": 215,
+      "column": 3,
+      "index": 8009
+    }
+  },
+  {
+    "id": "swap.swapScreen.poolFee",
+    "defaultMessage": "!!! Pool Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 216,
+      "column": 11,
+      "index": 8022
+    },
+    "end": {
+      "line": 219,
+      "column": 3,
+      "index": 8098
+    }
+  },
+  {
+    "id": "swap.swapScreen.batcherFee",
+    "defaultMessage": "!!! Batcher Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 220,
+      "column": 14,
+      "index": 8114
+    },
+    "end": {
+      "line": 223,
+      "column": 3,
+      "index": 8196
     }
   },
   {
@@ -469,14 +574,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 224,
       "column": 9,
-      "index": 7039
+      "index": 8207
     },
     "end": {
-      "line": 190,
+      "line": 227,
       "column": 3,
-      "index": 7112
+      "index": 8280
     }
   },
   {
@@ -484,14 +589,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 228,
       "column": 9,
-      "index": 7123
+      "index": 8291
     },
     "end": {
-      "line": 194,
+      "line": 231,
       "column": 3,
-      "index": 7184
+      "index": 8352
     }
   },
   {
@@ -499,14 +604,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 232,
       "column": 19,
-      "index": 7205
+      "index": 8373
     },
     "end": {
-      "line": 198,
+      "line": 235,
       "column": 3,
-      "index": 7287
+      "index": 8455
     }
   },
   {
@@ -514,14 +619,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 236,
       "column": 20,
-      "index": 7309
+      "index": 8477
     },
     "end": {
-      "line": 202,
+      "line": 239,
       "column": 3,
-      "index": 7393
+      "index": 8561
     }
   },
   {
@@ -529,14 +634,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 203,
+      "line": 240,
       "column": 25,
-      "index": 7420
+      "index": 8588
     },
     "end": {
-      "line": 206,
+      "line": 243,
       "column": 3,
-      "index": 7540
+      "index": 8708
     }
   },
   {
@@ -544,14 +649,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 207,
+      "line": 244,
       "column": 8,
-      "index": 7550
+      "index": 8718
     },
     "end": {
-      "line": 210,
+      "line": 247,
       "column": 3,
-      "index": 7609
+      "index": 8777
     }
   },
   {
@@ -559,14 +664,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 211,
+      "line": 248,
       "column": 14,
-      "index": 7625
+      "index": 8793
     },
     "end": {
-      "line": 214,
+      "line": 251,
       "column": 3,
-      "index": 7684
+      "index": 8852
     }
   },
   {
@@ -574,14 +679,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 217,
+      "line": 254,
       "column": 11,
-      "index": 7743
+      "index": 8911
     },
     "end": {
-      "line": 220,
+      "line": 257,
       "column": 3,
-      "index": 7838
+      "index": 9006
     }
   },
   {
@@ -589,14 +694,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 221,
+      "line": 258,
       "column": 12,
-      "index": 7852
+      "index": 9020
     },
     "end": {
-      "line": 224,
+      "line": 261,
       "column": 3,
-      "index": 7955
+      "index": 9123
     }
   },
   {
@@ -604,14 +709,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 225,
+      "line": 262,
       "column": 9,
-      "index": 7966
+      "index": 9134
     },
     "end": {
-      "line": 228,
+      "line": 265,
       "column": 3,
-      "index": 8056
+      "index": 9224
     }
   },
   {
@@ -619,14 +724,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 229,
+      "line": 266,
       "column": 16,
-      "index": 8074
+      "index": 9242
     },
     "end": {
-      "line": 232,
+      "line": 269,
       "column": 3,
-      "index": 8170
+      "index": 9338
     }
   },
   {
@@ -634,14 +739,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 233,
+      "line": 270,
       "column": 20,
-      "index": 8192
+      "index": 9360
     },
     "end": {
-      "line": 236,
+      "line": 273,
       "column": 3,
-      "index": 8281
+      "index": 9449
     }
   },
   {
@@ -649,14 +754,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 237,
+      "line": 274,
       "column": 11,
-      "index": 8294
+      "index": 9462
     },
     "end": {
-      "line": 240,
+      "line": 277,
       "column": 3,
-      "index": 8388
+      "index": 9556
     }
   }
 ]
